--- a/styles/style.css
+++ b/styles/style.css
@@ -914,12 +914,7 @@ footer {
         margin-bottom: 28px;
     }
     .main_pic {
-        position: absolute;
-        width: 82px;
-        height: 132px;
-        top: -42px;
-        right: auto;
-        left: 12px;
+        display: none;
     }
     .dots {
         width: 100px;
@@ -971,7 +966,7 @@ footer {
         font-size: 11px;
         font-weight: 500;
         line-height: 18px;
-        padding: 8px 0px;
+        padding: 8px 10px;
     }
     .header_button2 {
         color: #FFFFFF;
