--- a/styles/style.css
+++ b/styles/style.css
@@ -815,17 +815,20 @@ footer {
     
     .main_four {
         display: flex;
-        justify-content: center;
-        gap: 95px;
-        margin-top: 178px;
+        flex-direction: column;
+        width: 100%;
+        gap: 10px;
+        margin-top: 0px;
     }
     .four_left_side {
         display: flex;
+        flex-direction: row;
         gap: 24px;
+        order: 1;
     }
     .combo_box {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         gap: 36px;
     }
     .link_box_center {
@@ -836,11 +839,15 @@ footer {
         flex-direction: column;
         margin: auto 0;
     }
+    .combo_box a {
+        width: 100px;
+        height: 100px;
+    }
     .boxes {
         display: flex;
         flex-direction: column;
         border-radius: 8px;
-        padding: 63px 75px;
+        padding: 20px 20px;
         text-align: center;
         align-items: center;
         gap: 18px;
@@ -853,38 +860,53 @@ footer {
         display: flex;
         justify-content: center;
         background: #3029D9;
-        width: 72px;
-        height: 72px;
+        width: 40px;
+        height: 40px;
         align-items: center;
         border: 0;
         border-radius: 80px 80px 80px 0px;
+    }
+    .rect img {
+        width: 20px;
+        height: 20px;
     }
     .four_text_side {
         padding-top: 36px;
     }
     .four_second_title {
         margin-bottom: 12px;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 36px;
+        text-align: center;
     }
     
     /* main-five */
     
     .main_five {
+        width: 100%;
         text-align: center;
         padding-bottom: 180px;
     }
     .news_div {
         display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
         gap: 34px;
-        margin-top: 104px;
+        margin-top: 20px;
     }
     .news {
         background: #F4F4F4;
-        width: 374px;
-        height: 583px;
+        width: 320px;
+        height: 100%;
+        max-height: max-content;
         text-align: start;
-        border: 0;
+        border: 1px solid rgba(0, 0, 0, 0.1);
         border-radius: 8px;
+    }
+    .news img {
+        width: 100%;
     }
     .out_of_image {
         padding: 17px 34px;
@@ -895,16 +917,18 @@ footer {
     /* main-six */
     
     .main_six {
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         text-align: center;
         align-items: center;
-        width: 1440px;
-        height: 630px;
+        height: 400px;
         background: url(../img/bg_six.png) no-repeat 100%, #111849;
     }
     .main_six .button {
+        font-size: 20px;
+        padding: 20px 20px;
         border: 0;
     }
     
@@ -942,6 +966,27 @@ footer {
         font-weight: 600;
         line-height: 48px;
     }
+    .four_text_side .title {
+        text-align: center;
+        color: #3029D9;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 48px;
+    }
+    .main_five .title {
+        text-align: center;
+        color: #3029D9;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 48px;
+    }
+    .main_six .title {
+        text-align: center;
+        color: #5975FF;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 48px;
+    }
     .main_one .second_title {
         color: #0B1131;
         font-size: 24px;
@@ -954,12 +999,31 @@ footer {
         font-weight: 700;
         line-height: 36px;
     }
+    .main_six .second_title {
+        color: #FFFFFF;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 36px;
+    }
+    .main_five .second_title {
+        color: #0B1131;
+        font-size: 24px;
+        font-weight: 700;
+        line-height: 36px;
+    }
     .main_one .third_title {
         color: #a0abb8;
         font-size:12px;
         font-weight: 500;
         line-height: 28px;
         padding: 8px 0px;
+    }
+    .four_text_side .third_title {
+        color: #a0abb8;
+        font-size:12px;
+        font-weight: 500;
+        line-height: 28px;
+        padding: 8px 10px;
     }
     .main_three .third_title {
         color: #a0abb8;
@@ -1049,9 +1113,9 @@ footer {
     }
     .box_title {
         color: #0B1131;
-        font-size: 24px;
+        font-size: 12px;
         font-weight: 700;
-        line-height: 34px;
+        line-height: 16px;
     }
     .text {
         color: #FFFFFF;
@@ -1072,36 +1136,34 @@ footer {
     /* footer */
     
     footer {
-        width: 1440px;
+        width: 100%;
         margin: 0 auto;
-        padding: 77px 125px 55px 125px;
+        padding: 10px;
         background: #F4F4F4;
     }
     .footer_container {
         display: flex;
+        flex-direction: column;
+        align-items: center;
         justify-content: space-between;
     }
     .footer_logo {
         display: flex;
         justify-content: center;
-        gap: 18px;
+        gap: 5px;
         align-items: center;
     }
     .copyright {
+        text-align: center;
         margin-top: 50px;
     }
     .footer_first {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
     .footer_second {
-        padding-top: 21px;
-        display: grid;
-        grid-template-columns: auto auto auto;
-        grid-template-rows: 21px 21px 21px;
-        row-gap: 22px;
-        column-gap: 76px;
+        display: none;
     }
     .footer_third {
         display: flex;
@@ -1111,16 +1173,17 @@ footer {
     }
     .social_media {
         display: flex;
-        justify-content: end;
+        justify-content: center;
         gap: 24px;
     }
     .help {
-        margin-top: 50px;
+        margin-top: 0px;
         gap: 34px;
     }
     .footer_under {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
+        justify-content: center;
     }
     
     /* colors */
