--- a/styles/style.css
+++ b/styles/style.css
@@ -998,6 +998,7 @@ footer {
         line-height: 36px;
     }
     .main_two .second_title {
+        text-align: center;
         color: #0B1131;
         font-size: 24px;
         font-weight: 700;
@@ -1010,6 +1011,7 @@ footer {
         line-height: 36px;
     }
     .main_five .second_title {
+        text-align: center;
         color: #0B1131;
         font-size: 24px;
         font-weight: 700;
@@ -1278,7 +1280,7 @@ footer {
         font-weight: 500;
     }
     .slide {
-        transform: translateX(23%);
+        transform: translateX(23.5%);
     }
     #block-for-slider {
         display: flex;
